# damage_checker

backend/: Cargo.toml
backend/migrations/2021-10-15-012031_create_pokemons/: down.sql  up.sql
backend/migrations/2021-10-15-012037_create_skills/: down.sql  up.sql
backend/src/: controller.rs  db.rs  error_handler.rs  lib.rs  repository.rs  schema.rs  status.rs
backend/src/controller/: damage_calculate_controller.rs
backend/src/data/: compability.json  types.json
backend/src/data/pokemons/: pokemon_ア行.json  pokemon_サ行.json  pokemon_タ行.json  pokemon_ナ行.json  pokemon_ヤ行.json  pokemon_ラ行.json
backend/src/db/: factory.rs  models.rs  repository.rs
backend/src/db/factory/: pokemon_factory.rs
backend/src/db/models/: DbPokemon.rs
backend/src/db/repository/: validate_skill.rs  validate_types.rs
backend/src/domain/: models.rs
backend/src/domain/models/: battle.rs  efforts.rs  individuals.rs  other_status.rs
backend/src/domain/models/battle/: attacker.rs  defender.rs  field.rs
backend/src/domain/models/efforts/: effort_attack_point.rs  effort_defense_point.rs  effort_hit_point.rs  effort_point.rs  effort_special_attack_point.rs  effort_special_defense_point.rs  effort_speed_point.rs
backend/src/domain/models/individuals/: individual_attack_point.rs  individual_defense_point.rs  individual_hit_point.rs  (+4 more)
backend/src/error_handler/: check_effort.rs
backend/src/repository/: validate_types.rs
backend/src/utils/: damage.rs
backend/src/utils/error_handler/: check_base.rs  check_individual.rs  check_level.rs
backend/src/utils/status/: main_status.rs
(+20 files in other folders)
