[package]
name = "damage_checker"
version = "0.1.0"
authors = ["yk-amarly-20 <y.k.83600260@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
